[MS] Ensured column widths are remembered when switching between editing and preview. Also added alignment classes to css

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -97,3 +97,25 @@
 
 .hideBtn {display: none;}
 .showBtn {display: inline}
+
+.previewhtml .figure .align-right {
+  text-align: right
+}
+.previewhtml .figure .align-left {
+  text-align: left
+}
+.previewhtml .figure .align-center {
+  text-align: center
+}
+.previewhtml .figure .align-justify {
+  text-align: justify
+}
+.previewhtml .figure .align-top {
+  vertical-align: top
+}
+.previewhtml .figure .align-middle {
+  vertical-align: middle
+}
+.previewhtml .figure .align-bottom {
+  vertical-align: bottom
+}
